--- a/refer-javascript/javascriptRefer12.html
+++ b/refer-javascript/javascriptRefer12.html
@@ -42,15 +42,15 @@
     <h2 class="mt20">문자열 샘플</h2>
     <ul>
         <ol>
-        <li><a href="javascriptSample01.html">01. CSS 속성 첫 글자만 검색하기</a><a class="sam" href="javascript602.html">charAt()</a></li>
-        <li><a href="javascriptSample02.html">02. CSS 속성 검색하면 설명 보여주기</a><a class="sam" href="javascript601.html">find()</a></li>
-        <li><a href="javascriptSample03.html">02. CSS 정렬하기</a><a class="sam" href="javascript601.html">sort()</a></li>
+        <li>01. CSS 속성 첫 글자만 검색하기 <a class="sam" href="javascriptSample01.html">charAt()</a></li>
+        <li>02. CSS 속성 검색하면 설명 보여주기 <a class="sam" href="javascriptSample02.html">find()</a></li>
+        <li>02. CSS 정렬하기 <a class="sam" href="javascriptSample03.html">sort()</a></li>
         </ol>
     </ul>
     <h2 class="mt20">날짜 샘플</h2>
     <ul>
         <ol>
-        <li><a href="javascriptSample04.html">01. 시계 만들기</a><a href="javascript604.html">getHours()</a></li>
+        <li>01. 시계 만들기 <a class="sam" href="javascriptSample04.html">getHours()</a></li>
         </ol>
     </ul>
 
