--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -177,35 +177,60 @@
                     <td>클래스를 검색합니다.</td>
                 </tr>
                 <tr>
-                    <td class="center" rowspan="6">Dimensions</td>
+                    <td class="center" rowspan="11">Dimensions</td>
                     <td>.width()</td>
                     <td>-</td>
-                    <td>요소의 가로값 가져오기/설정하기</td>
+                    <td>요소의 가로값(패딩/보더/마진 미포함) 가져오기/설정하기</td>
                 </tr>
                 <tr>
                     <td>.innerwidth()</td>
-                    <td>-</td>
-                    <td>요소의 가로값(패딩 포함, 보더/마진 미포함) 가져오기/설정하기</td>
+                    <td><a href="/refer-javascript//javascriptRefer10.html">element.clientWidth</a></td>
+                    <td>요소의 가로값(패딩 포함) 가져오기/설정하기</td>
                 </tr>
                 <tr>
                     <td>.outerWidth()</td>
+                    <td><a href="/refer-javascript//javascriptRefer10.html">element.offsetWidth</a></td>
+                    <td>요소의 가로값(패딩/보더 포함) 가져오기/설정하기</td>
+                </tr>
+                <tr>
+                    <td>.outerWidth(true)</td>
                     <td>-</td>
                     <td>요소의 가로값(패딩/보더/마진 포함) 가져오기/설정하기</td>
                 </tr>
                 <tr>
                     <td>.height()</td>
-                    <td>-</td>
+                    <td></td>
                     <td>요소의 세로값 가져오기/설정하기</td>
                 </tr>
                 <tr>
                     <td>.innerheight()</td>
-                    <td>-</td>
-                    <td>요소의 세로값(패딩 포함, 보더/마진 미포함) 가져오기/설정하기</td>
+                    <td><a href="/refer-javascript//javascriptRefer10.html">element.clientHeight</a></td>
+                    <td>요소의 세로값(패딩 포함) 가져오기/설정하기</td>
                 </tr>
                 <tr>
                     <td>.outerheight()</td>
+                    <td><a href="/refer-javascript//javascriptRefer10.html">element.offsetHeight</a></td>
+                    <td>요소의 가로값(패딩/보더 포함) 가져오기/설정하기</td>
+                </tr>
+                <tr>
+                    <td>.outerheight(true)</td>
                     <td>-</td>
                     <td>요소의 가로값(패딩/보더/마진 포함) 가져오기/설정하기</td>
+                </tr>
+                <tr>
+                    <td>$(document).width()</td>
+                    <td>-</td>
+                    <td>문서의 가로값 가져오기/설정하기</td>
+                </tr>
+                <tr>
+                    <td>$(window).width()</td>
+                    <td>window.innerwidth</td>
+                    <td>문서의 가로값 가져오기/설정하기</td>
+                </tr>
+                <tr>
+                    <td>$(window).height()</td>
+                    <td>window.innerheight</td>
+                    <td>문서의 가로값 가져오기/설정하기</td>
                 </tr>
                 <tr>
                     <td class="center" rowspan="5">offset</td>
@@ -404,6 +429,7 @@
         padding: 10px;
         margin: 10px;
         border: solid 5px #96e6a1;
+        box-sizing: content-box;
         border-radius: 50%;
         background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
     }
@@ -423,14 +449,16 @@
         <a href="#c" class="btn4-1">클릭하면 원의 가로(width) 값을 구합니다.</a>
         <a href="#c" class="btn4-2">클릭하면 원의 가로(innerWidth) 값을 구합니다.</a>
         <a href="#c" class="btn4-3">클릭하면 원의 가로(outerWidth) 값을 구합니다.</a>
-        <a href="#c" class="btn4-4">클릭하면 원의 가로(height) 값을 구합니다.</a>
-        <a href="#c" class="btn4-5">클릭하면 원의 가로(innerHeight) 값을 구합니다.</a>
-        <a href="#c" class="btn4-6">클릭하면 원의 가로(outerHeight) 값을 구합니다.</a>
+        <a href="#c" class="btn4-4">클릭하면 원의 가로(outerWidth(ture)) 값을 구합니다.</a>
+        <a href="#c" class="btn4-5">클릭하면 원의 가로(height) 값을 구합니다.</a>
+        <a href="#c" class="btn4-6">클릭하면 원의 가로(innerHeight) 값을 구합니다.</a>
+        <a href="#c" class="btn4-7">클릭하면 원의 가로(outerHeight) 값을 구합니다.</a>
+        <a href="#c" class="btn4-8">클릭하면 원의 가로(outerHeight(ture)) 값을 구합니다.</a>
     </div>
     <div class="btn">
-        <a href="#c" class="btn4-7">클릭하면 샘플 박스의 가로(width) 값을 구합니다.</a>
-        <a href="#c" class="btn4-8">클릭하면 해당 문서의 박스의 가로(width) 값을 구합니다.</a>
-        <a href="#c" class="btn4-9">클릭하면 브라우저의 가로(width) 값을 구합니다.</a>
+        <a href="#c" class="btn4-9">클릭하면 샘플 박스의 가로(width) 값을 구합니다.</a>
+        <a href="#c" class="btn4-10">클릭하면 해당 문서의 박스의 가로/세로 값을 구합니다.</a>
+        <a href="#c" class="btn4-11">클릭하면 브라우저의 가로/세로 값을 구합니다.</a>
     </div>
     <div class="code">
         <pre class="line-numbers"><code class="language-js">{
@@ -438,48 +466,48 @@
         $(".text4").text("이 원의 " + name + "값은" + size + "px입니다.")
     };
 
-
     $(".btn4-1").click(function(){
         demension("가로(width)", $(".circle4").width());
-        //$(".text4").text("이 원의 가로(width)크기는" + $(".circle4").width() + "px입니다.")
     });
 
     $(".btn4-2").click(function(){
         demension("가로(innerWidth)", $(".circle4").innerWidth());
-        //$(".text4").text("이 원의 가로(innerWidth)크기는" + $(".circle4").innerWidth() + "px입니다.")
     });
 
     $(".btn4-3").click(function(){
         demension("가로(outerWidth)", $(".circle4").outerWidth());
-        //$(".text4").text("이 원의 가로(outerWidth)크기는" + $(".circle4").outerWidth() + "px입니다.")
     });
 
     $(".btn4-4").click(function(){
-        demension("세로(height)", $(".circle4").height());
-        //$(".text4").text("이 원의 세로(height)크기는" + $(".circle4").height() + "px입니다.")
+        demension("가로(outerWidth)", $(".circle4").outerWidth(true));
     });
 
     $(".btn4-5").click(function(){
-        demension("세로(innerHeight)", $(".circle4").innerHeight());
-        //$(".text4").text("이 원의 세로(innerHeight)크기는" + $(".circle4").innerHeight() + "px입니다.")
+        demension("세로(height)", $(".circle4").height());
     });
 
     $(".btn4-6").click(function(){
-        demension("세로(outerHeight)", $(".circle4").outerHeight());
-        //$(".text4").text("이 원의 세로(outerHeight)크기는" + $(".circle4").outerHeight() + "px입니다.")
+        demension("세로(innerHeight)", $(".circle4").innerHeight());
     });
 
-
     $(".btn4-7").click(function(){
-        $(".text4").text("이 샘플 박스의 가로 값은" + $("#sample04").width() + "px 입니다.");
+        demension("세로(outerHeight)", $(".circle4").outerHeight());
     });
 
     $(".btn4-8").click(function(){
-        $(".text4").text("이 샘플 박스의 가로 값은" + $(document).width() + "px 입니다.");
+        demension("세로(outerHeight)", $(".circle4").outerHeight(true));
     });
 
     $(".btn4-9").click(function(){
-        $(".text4").text("이 브라우저의 가로 값은" + $(window).width() + "px 입니다.");
+        $(".text4").text("이 샘플 박스의 가로 값은" + $("#sample04").width() + "px 입니다.");
+    });
+
+    $(".btn4-10").click(function(){
+        $(".text4").html("이 샘플 박스의 가로 값은" + $(document).width() + "px 입니다." + "<br>이 샘플 박스의 세로 값은" + $(document).height() + "px 입니다.");
+    });
+
+    $(".btn4-11").click(function(){
+        $(".text4").html("이 브라우저의 가로 값은" + $(window).width() + "px 입니다." + "<br>이 샘플 박스의 세로 값은" + $(window).height() + "px 입니다.");
     });
 }
 </code></pre>
@@ -493,7 +521,6 @@
         $(".text4").text("이 원의 " + name + "값은" + size + "px입니다.")
     };
 
-
     $(".btn4-1").click(function(){
         demension("가로(width)", $(".circle4").width());
         //$(".text4").text("이 원의 가로(width)크기는" + $(".circle4").width() + "px입니다.")
@@ -510,31 +537,38 @@
     });
 
     $(".btn4-4").click(function(){
+        demension("가로(outerWidth)", $(".circle4").outerWidth(true));
+    });
+
+    $(".btn4-5").click(function(){
         demension("세로(height)", $(".circle4").height());
         //$(".text4").text("이 원의 세로(height)크기는" + $(".circle4").height() + "px입니다.")
     });
 
-    $(".btn4-5").click(function(){
+    $(".btn4-6").click(function(){
         demension("세로(innerHeight)", $(".circle4").innerHeight());
         //$(".text4").text("이 원의 세로(innerHeight)크기는" + $(".circle4").innerHeight() + "px입니다.")
     });
     
-    $(".btn4-6").click(function(){
+    $(".btn4-7").click(function(){
         demension("세로(outerHeight)", $(".circle4").outerHeight());
         //$(".text4").text("이 원의 세로(outerHeight)크기는" + $(".circle4").outerHeight() + "px입니다.")
     });
 
-
-    $(".btn4-7").click(function(){
-        $(".text4").text("이 샘플 박스의 가로 값은" + $("#sample04").width() + "px 입니다.");
-    });
-
     $(".btn4-8").click(function(){
-        $(".text4").text("이 샘플 박스의 가로 값은" + $(document).width() + "px 입니다.");
+        demension("세로(outerHeight)", $(".circle4").outerHeight(true));
     });
 
     $(".btn4-9").click(function(){
-        $(".text4").text("이 브라우저의 가로 값은" + $(window).width() + "px 입니다.");
+        $(".text4").text("이 샘플 박스의 가로 값은" + $("#sample04").width() + "px 입니다.");
+    });
+
+    $(".btn4-10").click(function(){
+        $(".text4").html("이 샘플 박스의 가로 값은" + $(document).width() + "px 입니다." + "<br>이 샘플 박스의 세로 값은" + $(document).height() + "px 입니다.");
+    });
+
+    $(".btn4-11").click(function(){
+        $(".text4").html("이 브라우저의 가로 값은" + $(window).width() + "px 입니다." + "<br>이 샘플 박스의 세로 값은" + $(window).height() + "px 입니다.");
     });
 
 </script>
