--- a/refer-javascript/javascriptRefer02.html
+++ b/refer-javascript/javascriptRefer02.html
@@ -851,7 +851,8 @@
             // obj.map(function(){});
             // obj.map((el)=>{});
             // obj.map(el=>{});
-
+            document.write("<br>")
+            
             obj.map(el => {
                 document.write(el.a, "<br>");
                 document.write(el.b, "<br>");
