20210827카드레이아웃업로드
카드레이아웃 업로드

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="site/cardType.html" target="_blank">
+                        <a href="site/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">wireframe</span>
@@ -332,7 +332,7 @@
 
                      <!-- box -->
                      <section class="color-shape reference">
-                        <a href="site/cardType.html" target="_blank">
+                        <a href="refer-mysql/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">mysql</span>
