--- a/site/index.html
+++ b/site/index.html
@@ -80,16 +80,71 @@
             <div class="col-md-9" role="main">
                 <!-- Intro1 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro1" class="page-header">카드 유형1</h2>
-                    <p>코드 보기 <a href="layout01.html">View</a></p>
+                    <h2 id="intro1" class="page-header">카드 유형</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/card-card.jpg" alt="사이트유형01">
+                            </a>
+                        </div>
+                    </div>
+                    <p>사이트 보기 <a href="cardType.html">View</a></p>
                 </div>
                 <!-- //Intro1 -->
+
+                <!-- Intro1 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro2" class="page-header">이미지 유형</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/img-card.jpg" alt="사이트유형01">
+                            </a>
+                        </div>
+                    </div>
+                    <p>사이트 보기 <a href="imgType.html">View</a></p>
+                </div>
+                <!-- //Intro1 -->
+
+                <!-- Intro3 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro3" class="page-header">슬라이드 유형</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/slider-card.jpg" alt="사이트유형01">
+                            </a>
+                        </div>
+                    </div>
+                    <p>사이트 보기 <a href="sliderMenuType.html">View</a></p>
+                </div>
+                <!-- //Intro3 -->
+
+                <!-- Intro4 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro4" class="page-header">오버이펙트 유형</h2>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="#" class="thumbnail">
+                                <img src="img/hoverEffect-card.jpg" alt="사이트유형01">
+                            </a>
+                        </div>
+                    </div>
+                    <p>사이트 보기 <a href="hoverEffectType.html">View</a></p>
+                </div>
+                <!-- //Intro4 -->
+
+            </div>
+            <!-- //col-md-0 -->
             
             <!-- //col-md-3 -->
             <div class="col-md-3">
                 <div class="bs-sidebar hidden-print" role="complementary">
                     <ul class="nav bs-sidenav">
-                        <li><a href="#intro1">카드 유형1</a></li>
+                        <li><a href="#intro1">카드 유형</a></li>
+                        <li><a href="#intro2">이미지 유형</a></li>
+                        <li><a href="#intro3">슬라이드 유형</a></li>
+                        <li><a href="#intro4">오버이펙트 유형</a></li>
                     </ul>
                 </div>
             </div>
