--- a/site/hoverEffectType.html
+++ b/site/hoverEffectType.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <!-- Image Type CSS -->
-    <link rel="stylesheet" href="css/hoverEffectType.css">
+    <link rel="stylesheet" href="../site/hoverEffectType.html">
     <!-- 나눔스퀘어 웹 폰트 -->
     <link rel="stylesheet" href="https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
 </head>
