--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -82,6 +82,16 @@
         vertical-align: top;
     }
 
+    @media (max-width : 800px) {
+    .btn {
+    text-align: center;
+    }
+    .view {
+        border-right: 0px;
+        border-left: 0px;
+        padding: 0px;
+    }
+}
 
 </style>
 
