--- a/refer-javascript/javascriptRefer10.html
+++ b/refer-javascript/javascriptRefer10.html
@@ -328,7 +328,7 @@
     }
 </style>
 <div id="sample01" class="sample">
-    <h2>04. 요소 객체: </h2>
+    <h2>04. 요소 객체: clientWidth / clienHeight / offsetWidth / offsetHeight / getBoundingClientRect </h2>
     <div class="view view1">
         <div class="view ex4">
            <span class="circle circle4"></span>
