--- a/refer-javascript/javascriptRefer13.html
+++ b/refer-javascript/javascriptRefer13.html
@@ -13,6 +13,17 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
 </head>
+<style>
+    table {
+            border-collapse: collapse;
+        }
+
+        table tr td {
+            border: 1px solid #989898;
+            padding: 5px;
+            text-align: center;
+        }
+</style>
 
 <body>
     <h1>Javascript 레퍼런스</h1>
